Typo/Formatting fixes
comiled-releases: bad link, can't use markdown inside of html block
director-api-v1: missing end of </p> block messes up formatting page
uploading-releases: https:http should be https:

--- a/uploading-releases.html.md.erb
+++ b/uploading-releases.html.md.erb
@@ -24,7 +24,7 @@ Assuming that the CLI is already targeted at the Director, the CLI provides a si
 - If you have a URL to a release tarball (for example a URL provided by bosh.io):
 
 	<pre class="terminal">
-	$ bosh upload release https:http://bosh.io/d/github.com/cloudfoundry/cf-release
+	$ bosh upload release https://bosh.io/d/github.com/cloudfoundry/cf-release
 	</pre>
 
 	Alternatively, if you have a release tarball on your local machine:
