--- a/compiled-releases.html.md.erb
+++ b/compiled-releases.html.md.erb
@@ -43,7 +43,7 @@ To export a release:
       update_watch_time: 1000-90000
     ```
 
-    <p class="note">Note: This example assumes you are using [cloud config](cloud-config.html), hence no compilation, networks and other sections were defined. If you are not using cloud config you will have to define them.</p>
+    <p class="note">Note: This example assumes you are using <a href="./cloud-config.html">cloud config</a>, hence no compilation, networks and other sections were defined. If you are not using cloud config you will have to define them.</p>
 
 1. Reference desired release versions you want to export.
 
