--- a/runtime-config.html.md.erb
+++ b/runtime-config.html.md.erb
@@ -11,7 +11,7 @@ The Director has a way to specify global configuration for all VMs in all deploy
 
 To update runtime config on the Director use [`bosh update runtime-config`](sysadmin-commands.html#cloud-config) CLI command.
 
-<p class="note">Note: See [example runtime config](#example) below.</p>
+<p class="note">Note: See <a href="#example">example runtime config</a> below.</p>
 
 <pre class="terminal">
 $ bosh update runtime-config runtime.yml
