We do test mitaka in the meanwhile

--- a/init-openstack.html.md.erb
+++ b/init-openstack.html.md.erb
@@ -161,7 +161,7 @@ cloud_provider:
     * [Juno](http://www.openstack.org/software/juno)
     * [Kilo](http://www.openstack.org/software/kilo) (actively tested)
     * [Liberty](http://www.openstack.org/software/liberty) (actively tested)
-    * [Mitaka](http://www.openstack.org/software/mitaka)
+    * [Mitaka](http://www.openstack.org/software/mitaka) (actively tested)
 
     <p class="note">Note: Juno has a <a href="https://bugs.launchpad.net/nova/+bug/1396854">bug</a> that prevents BOSH to assign specific IPs to VMs. You have to apply a Nova patch to avoid this problem.</p>
 
