typo: "Principal" (entity), not "principle" (moral rule)

--- a/azure-resources.html.md.erb
+++ b/azure-resources.html.md.erb
@@ -67,7 +67,7 @@ info:    ad app create command OK
 
 Application ID (`33e56099-0bde-8z93-a005-89c0f6df7465` in the above output) is the client ID and specified password (`client-secret` in above example) is the client secret.
 
-Finally create service principle to enable authenticated access:
+Finally create service principal to enable authenticated access:
 
 <pre class="terminal">
 $ azure ad sp create 33e56099-0bde-8z93-a005-89c0f6df7465
