BOSH Documentation for vSphere NSX integration
- documents how to configure NSX Security Groups in Director's manifest and in resource pool
- documents how to configure NSX LBs
- fixed `default_disk_type` malformatting

[#127508577](https://www.pivotaltracker.com/story/show/127508577)

Signed-off-by: Lyle Franklin <lfranklin@pivotal.io>

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -102,6 +102,7 @@ See [Recent Additions and Updates](recent.html).
 * [vSphere](vsphere-cpi.html)
     * [Migrating from one datastore to another](vsphere-migrate-datastores.html)
     * [Storage DRS and vMotion Support](vsphere-vmotion-support.html)
+    * [NSX Support](vsphere-nsx.html)
 * [vCloud](vcloud-cpi.html)
 * SoftLayer (coming soon)
 * Google Compute Engine (coming soon)
