--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -48,7 +48,7 @@ See [Recent Additions and Updates](recent.html).
 * [Configuring external database](director-configure-db.html)
 * [Configuring external blobstore](director-configure-blobstore.html)
 * [Micro CLI plugin **[deprecated, but supported]**](bootstrap.html)
-
+* [Backup and restore](director-backup.html)
 ---
 ## <a id="basic-deploy"></a> Using BOSH to deploy software
 
