--- a/tips.html.md.erb
+++ b/tips.html.md.erb
@@ -36,7 +36,7 @@ This problem can occur due to:
 - bootstrapping problem on the VM and/or wrong configuration of the Agent
 - blocked or slow boot times of the VM
 
-It's recommended to start a deploy again and SSH into one of the VMs and look at [the Agent logs](job-logs.html#agent-logs) while the Director waits for VMs to become accessible. We are planning to introduce a feature in the Director to leave unreachable VMs for easier debugging.
+It's recommended to start a deploy again and SSH into one of the VMs and look at [the Agent logs](job-logs.html#agent-logs) while the Director waits for VMs to become accessible. See (`director.debug.keep_unreachable_vms property`)[https://bosh.io/jobs/director?source=github.com/cloudfoundry/bosh#p=director.debug.keep_unreachable_vms] to let Director know to leave unreachable VMs for easier debugging.
 
 ---
 ## <a id="failed-job"></a> ...is not running after update
@@ -119,7 +119,7 @@ Task 106 cancelled
 This problem typically occurs if the Director's system time is out of sync, or if the Director machine is underpowered.
 
 ---
-## <a id="upload-release-entity-too-large"></a> Upload release fails 
+## <a id="upload-release-entity-too-large"></a> Upload release fails
 
 <pre class="terminal">
 $ bosh upload release blah.tgz
