Clarify some language

--- a/create-release.html.md.erb
+++ b/create-release.html.md.erb
@@ -10,9 +10,8 @@ There are four fundamental elements in a release:
 
 * **Jobs** describe pieces of the service or application you are releasing
 * **Packages** provide source code and dependencies to jobs
-* **Source** provides packages the non-binary files they need
-* **Blobs** provide packages the binaries they need, other than binaries that
-are checked into a source code repository
+* **Source** provides non-binary files to packages
+* **Blobs** provide binary files (other than those checked into a source code repository) to packages
 
 The following instructions use an example release that includes two jobs:
 a web UI and a background worker.
