mention time out values for scripts
Signed-off-by: Danny Berger <dberger@pivotal.io>

--- a/job-lifecycle.html.md.erb
+++ b/job-lifecycle.html.md.erb
@@ -12,15 +12,19 @@ There are several stages that all jobs (and their associated processes) on each 
 
 1. [pre-start scripts](pre-start.html) run for all jobs on the VM in parallel
 	- (waits for all pre-start scripts to finish)
+	- does not time out
 
 1. `monit start` is called for each process in no particular order
   - each job can specify zero or more processes
+  - times out based on [canary_watch_time/update_watch_time settings](manifest-v2.html#update)
 
 1. [post-start scripts](post-start.html) run for all jobs on the VM in parallel
 	- (waits for all post-start scripts to finish)
+	- does not time out
 
 1. [post-deploy scripts](post-deploy.html) run for all jobs on *all* VMs in parallel
 	- (waits for all post-deploy scripts to finish)
+	- does not time out
 
 Note that scripts should not rely on the order they are run. Agent may decide to run them serially or in parallel.
 
@@ -37,8 +41,10 @@ Note that scripts should not rely on the order they are run. Agent may decide to
 
 1. [drain scripts](drain.html) run for all jobs on the VM in parallel
 	- (waits for all drain scripts to finish)
+	- does not time out
 
 1. `monit stop` is called for each process
+  - times out after 5 minutes as of bosh v258+ on 3302+ stemcells
 
 1. Persistent disks are unmounted on the VM if configured
 
