--- a/manifest-v2.html.md.erb
+++ b/manifest-v2.html.md.erb
@@ -75,17 +75,19 @@ stemcells:
 
 * **canaries** [Integer, required]: The number of [canary](./terminology.html#canary) instances.
 * **max\_in\_flight** [Integer, required]: The maximum number of non-canary instances to update in parallel.
-* **canary\_watch\_time** [Integer or Range, required]
+* **canary\_watch\_time** [Integer or Range, required]: Only applies to monit start operation.
     * If the `canary_watch_time` is an integer, the Director sleeps for that many milliseconds, then checks whether the canary instances are healthy.
     * If the `canary_watch_time` is a range (low-high), the Director:
         * Waits for `low` milliseconds
         * Waits until instances are healthy or `high` milliseconds have passed since instances started updating
-* **update\_watch\_time** [Integer or Range, required]
+* **update\_watch\_time** [Integer or Range, required]: Only applies to monit start operation.
     * If the `update_watch_time` is an integer, the Director sleeps for that many milliseconds, then checks whether the instances are healthy.
     * If the `update_watch_time` is a range (low-high), the Director:
         * Waits for `low` milliseconds
         * Waits until instances are healthy or `high` milliseconds have passed since instances started updating
 * **serial** [Boolean, optional]: If disabled (set to `false`), instance groups will be deployed in parallel, otherwise - sequentially. Instances within a group will still follow `canary` and `max_in_flight` configuration. Defaults to `true`.
+
+See [job lifecycle](job-lifecycle.html) for more details on startup/shutdown procedure within each VM.
 
 Example:
 
