rm incomplete sentenace

--- a/jobs.html.md.erb
+++ b/jobs.html.md.erb
@@ -51,7 +51,7 @@ Schema:
 ---
 ## <a id="templates"></a> Templates (ERB configuration files)
 
-A template is a file that can b. Release author can define zero or more templates for each job, but typically you need at least a template for a control script.
+Release author can define zero or more templates for each job, but typically you need at least a template for a control script.
 
 ### <a id="monit"></a> Monit
 
