--- a/vsphere-cpi.html.md.erb
+++ b/vsphere-cpi.html.md.erb
@@ -185,10 +185,7 @@ Schema:
     * **password** [String, required]: The login password for the NSX server.
     * **ca_cert** [String, optional]: A CA certificate that can authenticate the NSX server certificate. **Required** if the NSX Manager has a self-signed SSL certificate. Must be in PEM format.
 
-<p class="note">
-Note: If the NSX Manager has a self-signed certificate, the certificate must be set in the `ca_cert` property; the following command can be used to extract the certificate from the NSX Manager:
-`true | openssl s_client -connect YOUR_NSX_MANAGER:443 2>/dev/null | openssl x509`.
-</p>
+<p class="note">Note: If the NSX Manager has a self-signed certificate, the certificate must be set in the `ca_cert` property.</p>
 
 Example of a CPI configuration that will place VMs into `BOSH_CL` cluster within `BOSH_DC`:
 
