--- a/vsphere-ha.html.md.erb
+++ b/vsphere-ha.html.md.erb
@@ -35,7 +35,7 @@ jobs:
 ```
 
 <p class="note"> Warning: If vSphere HA is not enabled on the cluster and a host failure occurs, the BOSH Resurrector will be unable to recreate the VMs without manual intervention.
-Follow the manual procedure as appropriate: [Host Failure](vsphere-esxi-host-failure.html) or [Network Partition](vsphere-network-partition.html).</p>
+Follow the manual procedure as appropriate: <a href="vsphere-esxi-host-failure.html">Host Failure</a> or <a href="vsphere-network-partition.html">Network Partition</a>.</p>
 
 ---
 [Back to Table of Contents](index.html#cpi-config)
