vm_extensions are optional
Signed-off-by: Jamil Shamy <jshamy@pivotal.io>

--- a/manifest-v2.html.md.erb
+++ b/manifest-v2.html.md.erb
@@ -114,7 +114,7 @@ update:
   * **provides** [Hash, optional]: Links provided by the job. [Read more about link configuration](links.html#deployment)
   * **properties** [Hash, required]: Specifies job properties. Properties allow BOSH to configure jobs to a specific environment. `properties` defined in a Job block are accessible only to that job. Only properties specified here will be provided to the job.
 * **vm_type** [String, required]: A valid VM type name from the cloud config.
-* **vm_extensions** [Array, required]: A valid list of VM extension names from the cloud config.
+* **vm_extensions** [Array, optional]: A valid list of VM extension names from the cloud config.
 * **stemcell** [String, required]: A valid stemcell alias from the Stemcells Block.
 * **persistent\_disk\_type** [String, optional]: A valid disk type name from the cloud config. [Read more about persistent disks](./persistent-disks.html)
 * **networks** [Array, required]: Specifies the networks this instance requires. Each network can have the following properties specified:
