link to softlayer info

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -30,7 +30,7 @@ See [Recent Additions and Updates](recent.html).
     * [On OpenStack](init-openstack.html)
     * [On vSphere](init-vsphere.html)
     * [On vCloud](init-vcloud.html)
-    * On SoftLayer (coming soon)
+    * [On SoftLayer](init-softlayer.html)
     * On Google Compute Engine (coming soon)
     * [On RackHD](rackhd-cpi.html)
     * [On Local machine using BOSH Lite](bosh-lite.html)
@@ -47,8 +47,8 @@ See [Recent Additions and Updates](recent.html).
 * [Explicit ARP Flushing](flush-arp.html)
 * [Configuring external database](director-configure-db.html)
 * [Configuring external blobstore](director-configure-blobstore.html)
-* [Micro CLI plugin **[deprecated, but supported]**](bootstrap.html)
 * [Backup and restore](director-backup.html)
+
 ---
 ## <a id="basic-deploy"></a> Using BOSH to deploy software
 
@@ -104,7 +104,7 @@ See [Recent Additions and Updates](recent.html).
     * [Migrating from one datastore to another](vsphere-migrate-datastores.html)
     * [Storage DRS and vMotion Support](vsphere-vmotion-support.html)
 * [vCloud](vcloud-cpi.html)
-* SoftLayer (coming soon)
+* [SoftLayer](softlayer-cpi.html)
 * Google Compute Engine (coming soon)
 * [RackHD](rackhd-cpi.html)
 * [Warden/Garden](warden-cpi.html)
