--- a/init.html.md.erb
+++ b/init.html.md.erb
@@ -11,6 +11,7 @@ Depending on your IaaS, choose your next step:
 - [Initializing on OpenStack](init-openstack.html)
 - [Initializing on vSphere](init-vsphere.html)
 - [Initializing on vCloud](init-vcloud.html)
+- [Initializing on SoftLayer](init-softlayer.html)
 
 We recommend that you update your BOSH environment frequently to stay on the latest version of BOSH.
 
