--- a/recent.html.md.erb
+++ b/recent.html.md.erb
@@ -2,6 +2,11 @@
 Title: Recent Additions and Updates
 ---
 
+* [Director-wide tagging](runtime-config.html#tags.html)
+* [Deployment tagging](manifest-v2.html#tags)
+
+---
+
 * [Link properties](links-properties.html)
 * [Manual linking](links-manual.html)
 * [Explicit ARP Flushing](flush-arp.html)
