Azure CPI availbe in AzureUSGovernment

--- a/azure-resources.html.md.erb
+++ b/azure-resources.html.md.erb
@@ -30,6 +30,7 @@ $ azure account list --json
 Note:
 If `tenantId` is not present, you may be using a personal account to log in to your Azure subscription. Switch to using work or school account.
 If you are using Azure cloud in China, you should switch the environment from `AzureCloud` to `AzureChinaCloud`.
+If you are using Azure cloud in Azure Government, you should switch the environment from `AzureCloud` to `AzureUSGovernment`.
 </p>
 
 Once you've determined your subscription ID, switch to using that account:
