addon placement rules

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -105,7 +105,7 @@ See [Recent Additions and Updates](recent.html).
     * [Storage DRS and vMotion Support](vsphere-vmotion-support.html)
 * [vCloud](vcloud-cpi.html)
 * [SoftLayer](softlayer-cpi.html)
-* Google Compute Engine (coming soon)
+* [Google Compute Engine](google-cpi.html)
 * [RackHD](rackhd-cpi.html)
 * [Warden/Garden](warden-cpi.html)
 * [VirtualBox](virtualbox-cpi.html)
