--- a/recent.html.md.erb
+++ b/recent.html.md.erb
@@ -2,6 +2,7 @@
 Title: Recent Additions and Updates
 ---
 
+* [Addon placement rules](runtime-config.html#addons)
 * [Director-wide tagging](runtime-config.html#tags.html)
 * [Deployment tagging](manifest-v2.html#tags)
 
