--- a/runtime-config.html.md.erb
+++ b/runtime-config.html.md.erb
@@ -82,7 +82,7 @@ An addon is a release job that is colocated on all VMs managed by the Director.
 * **jobs** [Hash, requires]: Specifies the name and release of release jobs to be colocated.
   * **name** [String, required]: The job name.
   * **release** [String, required]: The release where the job exists.
-* **include** [Hash, optional]: Specifies placement rules. (Rules for exclusions are coming soon.)
+* **include** [Hash, optional]: Specifies placement rules. (Rules for exclusions are coming soon.) Available in bosh-release v260+.
 * **properties** [Hash, optional]: Specifies job properties. Properties allow the Director to configure jobs to a specific environment. `properties` specified on an addon are only accessible to addons.
 
 Example:
