--- a/director-certs.html.md.erb
+++ b/director-certs.html.md.erb
@@ -8,6 +8,8 @@ Depending on you configuration, there are up to three endpoints to be secured us
 
 <p class="note">Note: If you are using the UAA for user management, an SSL certificate is mandatory for the Director and the UAA.</p>
 
+<p class="note">Note: Unless you are using a configuration server, your SSL certificates will be stored in the Director's database.</p>
+
 You can use the following script to generate a root CA certificate and use it to sign three generated SSL certificates:
 
 <pre class="bash">
