--- a/manifest-v2.html.md.erb
+++ b/manifest-v2.html.md.erb
@@ -4,7 +4,7 @@ title: Manifest v2 Schema
 
 <p class="note">Note: This feature is available with bosh-release v255.4+.</p>
 
-<p class="note">Note: Once you opt into using cloud config all deployments must be converted to use manifest v2 format that disallows IaaS specific configuration.</p>
+<p class="note">Warning: If you are using director version between v241 and v256, once you opt into using cloud config all deployments must be converted to use new format. If you want to deploy both v1 and v2 manifests, update to director v257+.</p>
 
 The deployment manifest is a YAML file that defines the components and properties of the deployment. When an operator initiates a new deployment using the CLI, the Director receives a manifest and creates or updates a deployment with matching name.
 
