--- a/init-azure.html.md.erb
+++ b/init-azure.html.md.erb
@@ -86,13 +86,13 @@ jobs:
     nats:
       address: 127.0.0.1
       user: nats
-      password: nats-password
+      # password: nats-password # <--- Uncomment & change
 
     postgres: &db
       listen_address: 127.0.0.1
       host: 127.0.0.1
       user: postgres
-      password: postgres-password
+      # password: postgres-password # <--- Uncomment & change
       database: bosh
       adapter: postgres
 
@@ -100,7 +100,10 @@ jobs:
       address: 10.0.0.4
       host: 10.0.0.4
       db: *db
-      http: {user: admin, password: admin, port: 25777}
+      http:
+        user: admin
+        # password: admin # <--- Uncomment & change
+        port: 25777
       username: admin
       password: admin
       port: 25777
@@ -109,8 +112,12 @@ jobs:
       address: 10.0.0.4
       port: 25250
       provider: dav
-      director: {user: director, password: director-password}
-      agent: {user: agent, password: agent-password}
+      director:
+        user: director
+        # password: director-password # <--- Uncomment & change
+      agent:
+        user: agent
+        # password: agent-password # <--- Uncomment & change
 
     director:
       address: 127.0.0.1
@@ -122,11 +129,13 @@ jobs:
         provider: local
         local:
           users:
-          - {name: admin, password: admin}
-          - {name: hm, password: hm-password}
+          # - {name: admin, password: admin} # <--- Uncomment & change
+          # - {name: hm, password: hm-password} # <--- Uncomment & change
 
     hm:
-      director_account: {user: hm, password: hm-password}
+      director_account:
+        user: hm
+        # password: hm-password # <--- Uncomment & change
       resurrector_enabled: true
 
     azure: &azure
@@ -141,7 +150,7 @@ jobs:
       ssh_user: vcap
       ssh_public_key: SSH-PUBLIC-KEY # <--- Replace
 
-    agent: {mbus: "nats://nats:nats-password@10.0.0.4:4222"}
+    # agent: {mbus: "nats://nats:nats-password@10.0.0.4:4222"} # <--- Uncomment & change
 
     ntp: &ntp [0.pool.ntp.org, 1.pool.ntp.org]
 
@@ -154,11 +163,11 @@ cloud_provider:
     user: vcap
     private_key: ./bosh # Path relative to this manifest file
 
-  mbus: "https://mbus:mbus-password@PUBLIC-IP:6868" # <--- Replace
+  # mbus: "https://mbus:mbus-password@PUBLIC-IP:6868" # <--- Uncomment & change
 
   properties:
     azure: *azure
-    agent: {mbus: "https://mbus:mbus-password@0.0.0.0:6868"}
+    # agent: {mbus: "https://mbus:mbus-password@0.0.0.0:6868"} # <--- Uncomment & change
     blobstore: {provider: local, path: /var/vcap/micro_bosh/data/cache}
     ntp: *ntp
 </pre>
