--- a/init-openstack.html.md.erb
+++ b/init-openstack.html.md.erb
@@ -78,13 +78,13 @@ jobs:
     nats:
       address: 127.0.0.1
       user: nats
-      password: nats-password
+      # password: nats-password # <--- Uncomment & change
 
     postgres: &db
       listen_address: 127.0.0.1
       host: 127.0.0.1
       user: postgres
-      password: postgres-password
+      # password: postgres-password # <--- Uncomment & change
       database: bosh
       adapter: postgres
 
@@ -92,17 +92,24 @@ jobs:
       address: PRIVATE-IP # <--- Replace with a private IP
       host: PRIVATE-IP # <--- Replace with a private IP
       db: *db
-      http: {user: admin, password: admin, port: 25777}
+      http:
+        user: admin
+        # password: admin # <--- Uncomment & change
+        port: 25777
       username: admin
-      password: admin
+      # password: admin # <--- Uncomment & change
       port: 25777
 
     blobstore:
       address: PRIVATE-IP # <--- Replace with a private IP
       port: 25250
       provider: dav
-      director: {user: director, password: director-password}
-      agent: {user: agent, password: agent-password}
+      director:
+        user: director
+        # password: director-password # <--- Uncomment & change
+      agent:
+        user: agent
+        # password: agent-password # <--- Uncomment & change
 
     director:
       address: 127.0.0.1
@@ -114,11 +121,13 @@ jobs:
         provider: local
         local:
           users:
-          - {name: admin, password: admin}
-          - {name: hm, password: hm-password}
+          # - {name: admin, password: admin} # <--- Uncomment & change
+          # - {name: hm, password: hm-password} # <--- Uncomment & change
 
     hm:
-      director_account: {user: hm, password: hm-password}
+      director_account:
+        user: hm
+        # password: hm-password # <--- Uncomment & change
       resurrector_enabled: true
 
     openstack: &openstack
@@ -130,7 +139,7 @@ jobs:
       default_key_name: bosh
       default_security_groups: [bosh]
 
-    agent: {mbus: "nats://nats:nats-password@PRIVATE-IP:4222"} # <--- Replace with a private IP
+    # agent: {mbus: "nats://nats:nats-password@PRIVATE-IP:4222"} # <--- Uncomment & change
 
     ntp: &ntp [0.pool.ntp.org, 1.pool.ntp.org]
 
@@ -143,11 +152,11 @@ cloud_provider:
     user: vcap
     private_key: ./bosh.pem # Path relative to this manifest file
 
-  mbus: "https://mbus:mbus-password@FLOATING-IP:6868" # <--- Replace with a floating IP
+  # mbus: "https://mbus:mbus-password@FLOATING-IP:6868" # <--- Uncomment & change
 
   properties:
     openstack: *openstack
-    agent: {mbus: "https://mbus:mbus-password@0.0.0.0:6868"}
+    # agent: {mbus: "https://mbus:mbus-password@0.0.0.0:6868"} # <--- Uncomment & change
     blobstore: {provider: local, path: /var/vcap/micro_bosh/data/cache}
     ntp: *ntp
 </pre>
