--- a/init-vcloud.html.md.erb
+++ b/init-vcloud.html.md.erb
@@ -75,13 +75,13 @@ jobs:
     nats:
       address: 127.0.0.1
       user: nats
-      password: nats-password
+      # password: nats-password # <--- Uncomment & change
 
     postgres: &db
       listen_address: 127.0.0.1
       host: 127.0.0.1
       user: postgres
-      password: postgres-password
+      # password: postgres-password # <--- Uncomment & change
       database: bosh
       adapter: postgres
 
@@ -89,8 +89,12 @@ jobs:
       address: 10.0.0.6
       port: 25250
       provider: dav
-      director: {user: director, password: director-password}
-      agent: {user: agent, password: agent-password}
+      director:
+        user: director
+        # password: director-password # <--- Uncomment & change
+      agent:
+        user: agent
+        # password: agent-password # <--- Uncomment & change
 
     director:
       address: 127.0.0.1
@@ -102,11 +106,13 @@ jobs:
         provider: local
         local:
           users:
-          - {name: admin, password: admin}
-          - {name: hm, password: hm-password}
+          # - {name: admin, password: admin} # <--- Uncomment & change
+          # - {name: hm, password: hm-password} # <--- Uncomment & change
 
     hm:
-      director_account: {user: hm, password: hm-password}
+      director_account:
+        user: hm
+        # password: hm-password # <--- Uncomment & change
       resurrector_enabled: true
 
     vcd: &vcd # <--- Replace values below
@@ -122,18 +128,18 @@ jobs:
         vm_metadata_key: bosh-meta
       control: {wait_max: 900}
 
-    agent: {mbus: "nats://nats:nats-password@10.0.0.6:4222"}
+    # agent: {mbus: "nats://nats:nats-password@10.0.0.6:4222"} # <--- Uncomment & change
 
     ntp: &ntp [0.pool.ntp.org, 1.pool.ntp.org]
 
 cloud_provider:
   template: {name: vcloud_cpi, release: bosh-vcloud-cpi}
 
-  mbus: "https://mbus:mbus-password@10.0.0.6:6868"
+  # mbus: "https://mbus:mbus-password@10.0.0.6:6868" # <--- Uncomment & change
 
   properties:
     vcd: *vcd
-    agent: {mbus: "https://mbus:mbus-password@0.0.0.0:6868"}
+    # agent: {mbus: "https://mbus:mbus-password@0.0.0.0:6868"} # <--- Uncomment & change
     blobstore: {provider: local, path: /var/vcap/micro_bosh/data/cache}
     ntp: *ntp
 </pre>
